--- a/network_controllability/network_controllability_matching.Rmd
+++ b/network_controllability/network_controllability_matching.Rmd
@@ -7,6 +7,7 @@ output: html_notebook
 ```{r}
 # igraphパッケージの読み込み
 library(igraph)
+library(lpSolve) # 混合整数線形計画法ためのパッケージ
 ```
 
 ### ネットワーク可制御性のための関数を読み込む
