--- a/network_motifs/network_motif_analysis.Rmd
+++ b/network_motifs/network_motif_analysis.Rmd
@@ -62,7 +62,7 @@ names(z_motif) <- paste("motif_3_",0:15,sep="")
 z_motif
 ```
 
-``motif_3_7``がネットワークモチーフ（Z>2）であることがわかる。
+``motif_3_7``はネットワークモチーフ（Z>2）であることがわかる。
 
 ### 具体的な部分ネットワーク構造を知る
 ```{r}
