--- a/community_detection/community_detection_modularity_nonoverlap.Rmd
+++ b/community_detection/community_detection_modularity_nonoverlap.Rmd
@@ -8,7 +8,6 @@ output: html_notebook
 ```{r}
 # パッケージの読み込み
 library(igraph)
-library(rnetcarto)
 ```
 
 ### ネットワークの読み込み
@@ -51,7 +50,23 @@ dendPlot(data)
 set.seed(5)
 plot(data, g)
 ```
-### 焼きなまし法に基づく方法（rnetcartoパッケージで計算）
+
+### 焼きなまし法に基づく方法
+
+これはigraphではなく、rnetcartoパッケージを使います。CRANレポジトリから削除されている（2022年1月16日現在）ので、以下のようにしてソースからインストールします。これにはGNU Scientific Library (GSL)が必要です。[コミュニティ検出のREADME](https://github.com/kztakemoto/network-analysis-in-biology/tree/main/community_detection)の「準備」に従って、GSLを事前にインストールしておいてください。
+```{r}
+install.packages(
+  "http://takemoto08.bio.kyutech.ac.jp/rnetcarto_0.2.4.tar.gz", 
+  repos = NULL, type = "source", INSTALL_opts = "--no-mltiarch"
+)
+```
+
+rnetcartoパッケージの読み込み
+```{r}
+library(rnetcarto)
+```
+
+rnetcartoによるコミュニティ検出と機能地図作成
 ```{r}
 # 隣接行列を取得
 mtx <- get.adjacency(g, sparse=F)
@@ -61,14 +76,15 @@ res <- netcarto(mtx)
 res
 ```
 
+igraphの出力結果と一致するように出力を調整して、ネトワークを描画
 ```{r}
-# igraphの出力結果と一致するように出力を調整
+# 出力の調整
 table <- as.data.frame(res[[1]])
 table$module <- table$module + 1
 row.names(table) <- table$name
 table <- table[V(g)$name,]
 data <- list(membership = table$module, modularity=c(res[[2]]))
-# ネットワークを表示
+# ネットワーク描画
 V(g)$community <- data$membership
 colrs <- adjustcolor( c("gray50", "tomato", "gold", "yellowgreen"), alpha=.6) # 色付け
 set.seed(5)
