--- a/community_detection/community_detection_modularity_nonoverlap.Rmd
+++ b/community_detection/community_detection_modularity_nonoverlap.Rmd
@@ -53,10 +53,11 @@ plot(data, g)
 
 ### 焼きなまし法に基づく方法
 
-これはigraphではなく、rnetcartoパッケージを使います。CRANレポジトリから削除されている（2022年1月16日現在）ので、以下のようにしてソースからインストールします。これにはGNU Scientific Library (GSL)が必要です。[コミュニティ検出のREADME](https://github.com/kztakemoto/network-analysis-in-biology/tree/main/community_detection)の「準備」に従って、GSLを事前にインストールしておいてください。
+これはigraphではなく、rnetcartoパッケージを使います。CRANレポジトリから削除されていることがあるので、その場合は以下のようにしてソースからインストールします。これにはGNU Scientific Library (GSL)が必要です。[コミュニティ検出のREADME](https://github.com/kztakemoto/network-analysis-in-biology/tree/main/community_detection)の「準備」に従って、GSLを事前にインストールしておいてください。
 ```{r}
-library(devtools)
-install_github("cran/rnetcarto", INSTALL_opts=c("--no-multiarch"))
+#2022年12月9日現在はCRANレポジトリにあるので実行しなくてよいです。
+#library(devtools)
+#install_github("cran/rnetcarto", INSTALL_opts=c("--no-multiarch"))
 ```
 
 rnetcartoパッケージの読み込み
