--- a/correlation_networks/correlation_compositional.Rmd
+++ b/correlation_networks/correlation_compositional.Rmd
@@ -3,6 +3,11 @@ title: "閾値化による相関ネットワークの作成と相関ネットワ
 output: html_notebook
 ---
 
+SpiecEasiで要求されるpulsarパッケージがCRANレポジトリから削除されているので（2022年12月9日現在）、ソースからインストールしておく。
+```{r}
+install.packages("https://cran.r-project.org/src/contrib/Archive/pulsar/pulsar_0.3.8.tar.gz", repos=NULL)
+```
+
 ### SpiecEasiのインストール（一度だけでOK）
 ```{r}
 library(devtools)
