--- a/introduction/network_matrix.Rmd
+++ b/introduction/network_matrix.Rmd
@@ -59,7 +59,7 @@ plot(g, layout = layout_as_bipartite)
 # ネットワークの定義
 g <- graph(edges=c(1,2, 2,3, 3,4, 4,5, 5,1), directed=F) 
 # 隣接行列
-get.adjacency(g, sparse = F)
+as_adjacency_matrix(g, sparse = F)
 ```
 
 ## 有向ネットワークの場合
@@ -67,7 +67,7 @@ get.adjacency(g, sparse = F)
 # ネットワークの定義
 g <- graph(edges=c(1,2, 2,3, 3,4, 4,5, 5,1), directed=T) 
 # 隣接行列
-get.adjacency(g, sparse = F)
+as_adjacency_matrix(g, sparse = F)
 ```
 
 ## 重み付きネットワークの場合
@@ -77,7 +77,7 @@ g <- graph(edges=c(1,2, 2,3, 3,4, 4,5, 5,1), directed=F)
 # エッジに乱数で重みを割り振る
 E(g)$weight <- sample(1:10, ecount(g))
 # 隣接行列
-get.adjacency(g, attr = "weight", sparse = F)
+as_adjacency_matrix(g, attr = "weight", sparse = F)
 ```
 
 ## 2部ネットワーク
@@ -85,9 +85,9 @@ get.adjacency(g, attr = "weight", sparse = F)
 # ネットワークの定義
 g <- make_bipartite_graph( c(0,1,0,1,0), c(1,2, 1,4, 3,2, 3,4, 5,2, 5,4))
 # 接続行列
-get.incidence(g)
+as_biadjacency_matrix(g)
 # 隣接行列
-mtx <- get.adjacency(g, sparse = F)
+mtx <- as_adjacency_matrix(g, sparse = F)
 # 接続行列と隣接行列の関係がわかりやすいようにノードの順番を入れ替える
 mtx[c(1,3,5,2,4), c(1,3,5,2,4)]
 ```
