--- a/network_models/scale-free_network_model.Rmd
+++ b/network_models/scale-free_network_model.Rmd
@@ -13,10 +13,10 @@ library(igraph)
 # Barabasi-Albertモデル
 ### ネットワークの描画
 ```{r}
-# barabasi.game(N, power, m, directed=F)
+# sample_pa(N, power, m, directed=F)
 # power: 非線形優先接続に対する指数。1とすることで式(3.7)と同じ意味になる。
 # directed: Tとすれば，有向ネットワークになる。
-g <- barabasi.game(30, 1, 2, directed=F)
+g <- sample_pa(30, 1, 2, directed=F)
 # 描画
 plot(g)
 ```
@@ -24,11 +24,11 @@ plot(g)
 ### 次数分布
 ```{r}
 # モデルネットワークの生成
-g <- g <- barabasi.game(5000, 1, 2, directed=F)
+g <- sample_pa(5000, 1, 2, directed=F)
 # 次数の範囲（0から最大次数）
 k <- 0:max(degree(g))
 # 次数分布の描画
-plot(k, degree.distribution(g), xlab="k", ylab="P(k)", log="xy")
+plot(k, degree_distribution(g), xlab="k", ylab="P(k)", log="xy")
 
 # 理論線
 f <- function(k,m){
@@ -40,20 +40,20 @@ lines(k, f(k, 2))
 # Chung-Luモデル
 ### ネットワークの描画
 ```{r}
-# static.power.law.game(N, L, gamma)。
+# sample_fitness_pl(N, L, gamma)。
 # gamma = 1 + 1 / xi
-g <- static.power.law.game(30, 60, 2.5, finite.size.correction = T)
+g <- sample_fitness_pl(30, 60, 2.5, finite.size.correction = T)
 # 描画
 plot(g)
 ```
 ### 次数分布の描画
 ```{r}
 # モデルネットワークの生成
-g <- static.power.law.game(5000, 10000, 2.5, finite.size.correction = T)
+g <- sample_fitness_pl(5000, 10000, 2.5, finite.size.correction = T)
 # 次数の範囲（0から最大次数）
 k <- 0:max(degree(g))
 # 次数分布の描画
-plot(k, degree.distribution(g), xlab="k", ylab="P(k)", log="xy")
+plot(k, degree_distribution(g), xlab="k", ylab="P(k)", log="xy")
 ```
 
 # コンフィギュレーションモデル
@@ -63,11 +63,11 @@ plot(k, degree.distribution(g), xlab="k", ylab="P(k)", log="xy")
 # エッジリストの読み込み
 d <- read.table("../data/ecoli_ppi_Hu_etal_2009.txt")
 # グラフオブジェクトの作成
-g <- simplify(graph.data.frame(d,directed=F),remove.multiple=T,remove.loops=T)
+g <- simplify(graph_from_data_frame(d,directed=F),remove.multiple=T,remove.loops=T)
 
 # 最大連結成分の取得
-cls <- clusters(g,"weak")
-g <- delete.vertices(g,subset(V(g),cls$membership!=which(cls$csize==max(cls$csize))[[1]]))
+cls <- components(g,"weak")
+g <- delete_vertices(g,subset(V(g),cls$membership!=which(cls$csize==max(cls$csize))[[1]]))
 
 # 次数のベクトルを取得
 deg <- degree(g)
@@ -75,7 +75,7 @@ deg <- degree(g)
 
 ### コンフィギュレーションモデルの作成
 ```{r}
-g_rand <- degree.sequence.game(deg, method="vl") 
+g_rand <- sample_degseq(deg, method="vl") 
 ```
 
 ### 次数の比較
